<resources>
    <string name="app_name">TaxCollection</string>
    <string name="loading">Loading…</string>
    <string name="tax_Collection">TaxCollection</string>
    <string name="no_data_found">No Data Found</string>
    <string name="init_vector">2SN22SkJGDyOAXUU</string>
    <string name="hello">Hello</string>
    <string name="welcome">Welcome</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="user_name">user name</string>
    <string name="don_t_have_an_account">Don\'t have an account ? </string>
    <string name="password">Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="assesment_number">Assesment Number</string>
    <string name="enter_assesment_numbert">Enter Assessment Number</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="details">Tax Details</string>
    <string name="cash_pay">Cash Pay</string>
    <string name="online_pay">Online Pay</string>
    <string name="view_details">View Details</string>
    <string name="tax_details">Tax Details</string>
    <string name="fin">FinYear</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>

    <string name="please_enter_the_username">Please Enter The User Name</string>
    <string name="please_enter_the_password">Please Enter the Password</string>
    <string name="please_enter_your_username_and_password">Please Enter Your User Name and Password</string>
    <string name="settings">Settings</string>
    <string name="internet_connection_not_available">"Internet Connection is not available..Please Turn On Network Connection "</string>
    <string name="payment">Payment</string>
    <string name="reset">Reset</string>

    <string name="water_connection_number">Water Connection Number</string>
    <string name="fin_year">Financial Year</string>
    <string name="lessee_number">Lessee Number</string>
    <string name="trade_number">Trade Number</string>
    <string name="select_fin_year">Select Fin Year</string>
    <string name="door_number">Door Number</string>
    <string name="building_licence_number">Building Licence Number</string>
    <string name="ward_name">Ward Name</string>
    <string name="habitation_name">Habitation Name</string>
    <string name="street_name">Street Name</string>
    <string name="year">Year</string>
</resources>
