<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.SplashScreen"
        android:background="@drawable/tax_bg_2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#72FF6D00">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textSize="@dimen/_40sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="@dimen/_25sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_15sdp">

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/signin"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/sign_in_bg"
                    android:elevation="@dimen/_5sdp"
                    tools:ignore="UnusedAttribute" />
                <Button
                    android:layout_marginTop="@dimen/_7sdp"
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/sign_up_bg"
                    android:elevation="@dimen/_5sdp"
                    tools:ignore="UnusedAttribute"/>
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

