<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.LoginScreen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/tax_bg_1"/>
            <RelativeLayout
                android:id="@+id/bag_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:background="#72FF6D00">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello"
                        android:textSize="@dimen/_40sdp"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textSize="@dimen/_25sdp"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:elevation="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/log_in_content_layout"
                android:layout_below="@id/bag_1"
                android:layout_marginTop="-45dp"
                android:background="@drawable/top_curve_white_bg">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/_15sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardBackgroundColor="@color/user_name_pass_bg"
                    app:cardElevation="@dimen/_7sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="@dimen/_25sdp">
                        <ImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:id="@+id/tax_logo_icon"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:src="@drawable/tax_logo"/>

                        <RelativeLayout
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/user_name_password_bg">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/user_icon"
                                android:src="@drawable/ic_profile_user"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/_10sdp" />
                            <EditText
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_toRightOf="@+id/user_icon"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/user_name"
                                android:singleLine="true"
                                android:textSize="@dimen/_11sdp"
                                android:layout_centerVertical="true"
                                android:inputType="text"
                                android:hint="@string/user_name"
                                android:background="@android:color/transparent"
                                android:layout_toEndOf="@+id/user_icon"
                                android:layout_marginStart="@dimen/_10sdp" />

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/user_name_password_bg">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/password_icon"
                                android:src="@drawable/ic_password_icon"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/_10sdp" />
                            <EditText
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_toRightOf="@+id/password_icon"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/user_password"
                                android:singleLine="true"
                                android:textSize="@dimen/_11sdp"
                                android:layout_centerVertical="true"
                                android:inputType="textPassword"
                                android:hint="@string/password"
                                android:background="@android:color/transparent"
                                android:layout_toEndOf="@+id/password_icon"
                                android:layout_marginStart="@dimen/_10sdp" />

                        </RelativeLayout>
                        <Button
                            android:layout_marginTop="@dimen/_25sdp"
                            android:id="@+id/sign_in"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:text="@string/signin"
                            android:textAllCaps="false"
                            android:textSize="@dimen/_11sdp"
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/sign_in_bg"
                            android:elevation="@dimen/_5sdp"
                            tools:ignore="UnusedAttribute" />
                        <LinearLayout
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/don_t_have_an_account"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_11sdp"/>
                            <TextView
                                android:layout_marginLeft="@dimen/_3sdp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/signup"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/_11sdp"
                                android:layout_marginStart="@dimen/_3sdp" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>


