<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/full_transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_centerInParent="true"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:clipToPadding="false"
        app:cardElevation="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        >

        <RelativeLayout
            android:id="@+id/pmay_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/add_batch_text_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/tax_Collection"
                        android:textStyle="bold"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:id="@+id/tittle_text"
                        android:layout_toLeftOf="@+id/close_icon"
                        android:gravity="center_horizontal" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/close_icon"
                        android:tint="@color/white"
                        android:src="@drawable/ic_close"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tax_layout"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/assesment_number_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/assesment_number"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/_13sdp"
                        />
                    <RelativeLayout
                        android:id="@+id/assesment_number_layout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/rectangle_box"
                        android:orientation="vertical">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/full_transparent"
                            android:paddingLeft="@dimen/_10sdp"
                            android:singleLine="true"
                            android:textSize="@dimen/_13sdp"
                            android:inputType="number"
                            android:hint="@string/enter_assesment_numbert"
                            android:id="@+id/assesment_number"
                            tools:ignore="Autofill,RtlSymmetry" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_40sdp"
                        android:id="@+id/save_btn_layout"
                        android:background="@drawable/button_background">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/padding"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:text="@string/save"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"
                            />

                    </RelativeLayout>


                </LinearLayout>





            </LinearLayout>



        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>