<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_h"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/fin"
                    android:textStyle="bold"
                    android:id="@+id/fin_h"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:id="@+id/name_h"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textStyle="bold"
                    android:id="@+id/amount_h"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"/>

            </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tax_layout"
                    android:layout_below="@+id/layout_h"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/bottom_rect_bg">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/layout"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:weightSum="3">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="2018-2020"
                            android:textStyle="bold"
                            android:id="@+id/fin"
                            android:textColor="@color/grey_7"
                            android:textSize="@dimen/_12sdp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="fir"
                            android:textStyle="bold"
                            android:id="@+id/name"
                            android:textColor="@color/grey_7"
                            android:textSize="@dimen/_12sdp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/amount"
                            android:textStyle="bold"
                            android:id="@+id/amount"
                            android:textColor="@color/grey_7"
                            android:textSize="@dimen/_12sdp"/>

                    </LinearLayout>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/check"
                        android:layout_below="@+id/layout"
                        android:layout_gravity="center_vertical"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:src="@drawable/ic_choose"
                        />

                </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>
